# GostTranslate

./: CMakeLists.txt  README.md  make-check.sh
include/: GostTranslit.hpp
src/: GostTranslit.cpp
tests/: unittest_01.cpp
